--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,19 +20,19 @@ jobs:
           command: pwd
       - restore_cache:
           keys:
-            - v2-dependencies-{{ checksum "my-app/package.json"}}
+            - v2-dependencies-{{ checksum "my-app/package-lock.json"}}
 
-      - run:
-          name: install dependencies
-          command: cd my-app && npm install
+      # - run:
+      #     name: install dependencies
+      #     command: cd my-app && npm install
 
-      - save_cache:
-          paths:
-            - node_modules
-          key: v2-dependencies-{{checksum "my-app/package.json"}}
-      - run:
-          name: run test
-          command: cd my-app && npm run test
+      # - save_cache:
+      #     paths:
+      #       - node_modules
+      #     key: v2-dependencies-{{checksum "my-app/package.json"}}
+      # - run:
+      #     name: run test
+      #     command: cd my-app && npm run test
 
 workflows:
   test-depoly:
