--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
-version: 2.1
+version: 2
 # jobs is the task which are working for
 
 jobs:
   test:
     docker:
-      - image: circleci/node:14.18.1
+      - image: node:14.18.1
     # for working_directory give your app name
     working_directory: ~/my-app/
 
@@ -19,8 +19,7 @@ jobs:
           name: pwd
           command: pwd
       - restore_cache:
-          keys:
-            - v2-dependencies-{{ checksum "my-app/package-lock.json"}}
+          keys: v2-dependencies-{{ checksum "my-app/package-lock.json"}}
 
       # - run:
       #     name: install dependencies
