--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,8 @@ jobs:
           name: pwd
           command: pwd
       - restore_cache:
-          keys: v2-dependencies-{{ checksum "my-app/package.json"}}
+          keys:
+            - v2-dependencies-{{ checksum "my-app/package-lock.json"}}
 
       # - run:
       #     name: install dependencies
