--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: node:14.18.1
+      - image: circleci/node:14.18.1
     # for working_directory give your app name
     working_directory: ~/my-app/
 
@@ -20,7 +20,7 @@ jobs:
           command: pwd
       - restore_cache:
           keys:
-            - v2-dependencies-{{ checksum "my-app/package-lock.json"}}
+            - v1-deps-{{ checksum "my-app/package-lock.json" }}
 
       # - run:
       #     name: install dependencies
