--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,16 +11,18 @@ jobs:
     steps:
       - checkout
 
-      - run:
-          name: lsist
-          command: ls my-app/
-
-      - run:
-          name: pwd
-          command: pwd
       - restore_cache:
-          keys:
-            - v1-deps-{{ checksum "my-app//package-lock.json" }}
+           name: Restore Yarn Package Cache
+           keys:
+             - m2-npm-packages-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
+      - run: 
+          name: Install dependencies
+          command: npm install
+       - save_cache:
+           name: Save Yarn Package Cache
+           key: m2-npm-packages-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
+           paths:
+             - ./node_modules/
 
       # - run:
       #     name: install dependencies
