--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,18 +11,16 @@ jobs:
     steps:
       - checkout
 
+      - run:
+          name: lsist
+          command: ls my-app/
+
+      - run:
+          name: pwd
+          command: pwd
       - restore_cache:
-          name: Restore Yarn Package Cache
           keys:
-            - m2-npm-packages-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
-      - run: 
-          name: Install dependencies
-          command: npm install
-       - save_cache:
-          name: Save Yarn Package Cache
-          key: m2-npm-packages-{{ checksum "package.json" }}-{{ checksum "package-lock.json" }}
-          paths:
-            - ./node_modules/
+            - v1-npm-deps-{{ checksum "my-app/package-lock.json" }}
 
       # - run:
       #     name: install dependencies
