--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,25 @@
-version: 2
-# jobs is the task which are working for
-
+version: 2.1
 jobs:
-  test:
+  build:
+    working_directory: ~/my-app
     docker:
-      - image: circleci/node:14.18.1
-    # for working_directory give your app name
-    working_directory: ~/my-app/
-
+      - image: cimg/node:16.13.2
     steps:
       - checkout
-
       - run:
-          name: lsist
-          command: ls my-app/
-
-      - run:
-          name: pwd
-          command: pwd
+          name: Update NPM
+          command: "sudo npm install -g npm"
       - restore_cache:
-          keys:
-            - v3-npm-deps-{{ checksum "my-app/package.json" }}
-
-      # - run:
-      #     name: install dependencies
-      #     command: cd my-app && npm install
-
-      # - save_cache:
-      #     paths:
-      #       - node_modules
-      #     key: v2-dependencies-{{checksum "my-app/package.json"}}
-      # - run:
-      #     name: run test
-      #     command: cd my-app && npm run test
-
+          key: dependency-cache-{{ checksum "my-app/package-lock.json" }}
+      - run:
+          name: Install Dependencies
+          command: npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "my-app/package-lock.json" }}
+          paths:
+            - ./node_modules
 workflows:
-  test-depoly:
+  version: 2
+  build-deploy:
     jobs:
-      - test
-      # - two
+      - build
