--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,12 @@ jobs:
           name: Update NPM
           command: "sudo npm install -g npm"
       - restore_cache:
-          key: dependency-cache-{{ checksum "my-app/package.json" }}
+          key: dependency-cache-{{ checksum "my-app/package-lock.json" }}
       - run:
           name: Install Dependencies
           command: cd my-app && npm install
       - save_cache:
-          key: dependency-cache-{{ checksum "my-app/package.json" }}
+          key: dependency-cache-{{ checksum "my-app/package-lock.json" }}
           paths:
             - ./node_modules
 workflows:
