--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - save_cache:
           key: dependency-cache-{{ checksum "my-app/package.json" }}
           paths:
-            - ./node_modules
+            - cd my-ap && ./node_modules
 workflows:
   version: 2
   build-deploy:
