--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,10 @@
 version: 2.1
-orbs: 
-  react: thefrontside/react@0.2.0
+
 jobs:
   build:
     working_directory: ~/my-app
     docker:
-      - image: circleci/node:14.18.1
+      - image: cimg/node:14.18.1
     steps:
       - checkout
       - run:
