--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - save_cache:
           key: dependency-cache-{{ checksum "my-app/package.json" }}
           paths:
-            - cd my-ap && ./node_modules
+            - ls my-ap && ./node_modules
 workflows:
   version: 2
   build-deploy:
