--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,13 @@ jobs:
           command: ls my-app/
       - restore_cache:
           
-          key: dependency-cache-{{ checksum "my-app/package-lock.json" }}
+          key: dependencies-cache-{{ checksum "my-app/package-lock.json" }}
           
       # - run:
       #     name: Install Dependencies
       #     command: cd my-app && npm install
       - save_cache:
-          key: dependency-cache-{{ checksum "my-app/package-lock.json" }}
+          key: dependencies-cache-{{ checksum "my-app/package-lock.json" }}
           paths:
             - ./node_modules/cache
 workflows:
