--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,15 +13,15 @@ jobs:
           command: ls my-app/
       - restore_cache:
           
-          key: dependencies-cache-{{ checksum "my-app/package-lock.json" }}
+          key: v1-npm-deps-{{ checksum "my-app/package.json" }}
           
       # - run:
       #     name: Install Dependencies
       #     command: cd my-app && npm install
       - save_cache:
-          key: dependencies-cache-{{ checksum "my-app/package-lock.json" }}
+          key: dependency-cache-{{ checksum "my-app/package.json" }}
           paths:
-            - ./node_modules/cache
+            - ./node_modules
 workflows:
   version: 2
   build-deploy:
