--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,9 @@ jobs:
           command: ls my-app/
       - restore_cache:
           
-          key: v1-npm-deps-{{ checksum "my-app/package.json" }}
+          keys: 
+            - v1-npm-deps-{{ checksum "my-app/package-lock.json" }}
+
           
       # - run:
       #     name: Install Dependencies
