--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - restore_cache:
           
           keys: 
-            - v1-npm-deps-{{ checksum "my-app/package-lock.json" }}
+            - v1-npm-deps-{{ checksum "my-app/package.json" }}
 
           
       # - run:
