--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     docker:
       - image: cimg/node:14.18.1
-    working_directory: ~/my-app
+    working_directory: ~/my-app/my-app
 
     steps:
       - checkout:
