--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ jobs:
       - run:
           name: Update NPM
           command: ls 
-      # - restore_cache:
+      - restore_cache:
           
-      #     keys: 
-      #       - v1-npm-deps-{{ checksum "my-app/package.json" }}
+          keys: 
+            - v1-npm-deps-{{ checksum "package.json" }}
 
           
       # - run:
