--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - restore_cache:
           
           keys: 
-            - dependency-cache-{{ checksum "package.json" }}
+            - dependency-cache-{{ checksum "my-app/package.json" }}
 
           
       # - run:
