--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,16 +15,17 @@ jobs:
       - restore_cache:
           
           keys: 
-            - v3-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-{{ checksum "package.json" }}
 
           
       # - run:
       #     name: Install Dependencies
       #     command: cd my-app && npm install
-      # - save_cache:
-      #     key: dependency-cache-{{ checksum "my-app/package.json" }}
-      #     paths:
-      #       - ./node_modules
+      - save_cache:
+          paths:
+            - ./node_modules
+          key: v1-dependencies-{{ checksum "my-app/package.json" }}
+          
 workflows:
   version: 2
   build-deploy:
