--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - save_cache:
           paths:
             - ./node_modules
-          key: v1-dependencies-{{ checksum "my-app/package.json" }}
+          key: v1-dependencies-{{ checksum "package.json" }}
           
 workflows:
   version: 2
