--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,9 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
 
           
-      # - run:
-      #     name: Install Dependencies
-      #     command: cd my-app && npm install
+      - run:
+          name: Install Dependencies
+          command: yarn install
       - save_cache:
           paths:
             - ./node_modules
