--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           keys: 
             - v1-dependencies-{{ checksum "package-lock.json" }}
             - v1-dependencies-          
-      - run: npm install
+      - run: cd my-app && npm install
       - save_cache:
           paths:
             - ./node_modules
